static/css/main.css
div.mainContent {
    margin: 20px;
}

div.registerUser .input-group {
    margin-top: 10px;
}

table.gameBoard {
    background-image: url("/images/DirtBackground.jpg");
    background-repeat: repeat;
}

table.gameBoard td {
    padding: 0px;
}

div.container {
    display: inline-block;
    text-align: center;
}

div.wrapper {
    text-align: center;
}

td.Legend
{
    padding: 10px;
}

img.home-screen-shot {
    width: 90%;
}

.red {
    color:#ff0000;
}

.black {
    color:#000000;
}

.white {
    color:white;
}

.gray {
    color:#999999;
}

.clickable {
    cursor:pointer;
}

.marginSmallRight {
    margin-right:5px;
}

div.mainContent {
    margin: 20px;
}

/**************************************************************************
CSS For the Login Class
**************************************************************************/
div.registerUser {
    max-width: 300px;
    position: absolute;
  	margin-left: 500px;
  	margin-top:200px;
}

/**************************************************************************
CSS For the NavBar Class
**************************************************************************/
.navbar{
    margin-bottom: 0px;
}




/**************************************************************************
CSS For the TankCard Class
**************************************************************************/
.tankCard{
    /*display:inline-flex;
    width:100%;
    height: 100px;
    background-color: #a6a6a6;
    margin: 10px 0px 10px 0px;*/
    /*height: 8em;*/
    background-color: #595656;
    box-shadow: 1px 1px 1px #000000;
    margin: 10px 0;
}

.tankCard.card-selected {
    margin: 10px 0;
    background-color: #7A7777;
}

.tankCard .tank-info {
    height: 100%;
    padding: 0;
    color: #E1E1E1;
}

.tankCard .tank-stats {
    height: 100%;
    color: #E1E1E1;
    display: flex;
    justify-content: space-around;
}

.tankCard .tank-info .tank-image {
    height: 100%;
    display: flex;
    align-items: center;
}

.tankCard .tank-info-top div {
    padding: 0;
}

.col-height {
    margin-bottom: -99999px;
    padding-bottom: 99999px;
}

.tankCard .x-btn {
    float: right;
}

.tankCard .x-btn:hover {
    color: rgb(193, 66, 66);
}

.tankCard .edit-btn, .tankCard .x-btn {
    display: none;
}

.tankCard.card-selected .x-btn {
    display: inline;
    cursor: pointer;
}

.tankCard .edit-btn button {
    font-size: 1em;
}

/*.edit-btn {
    height: 100%;
    align-items: flex-end;
    justify-content: space-between;
    display: flex;
}*/

.edit-btn .download-btn, .edit-btn .upload-btn, .edit-btn .delete-btn {
    font-size: 1em;
}

.tankCard.card-selected .edit-btn {
    height: 100%;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

.tankCard:not(.card-selected):hover {
    box-shadow: 5px 5px 3px #000000;
}

.tankCard h4 {
    margin: 5px 0px 5px 0px;
}

.tankCard h5 {
    margin: 5px 0px 5px 0px;
}

.tankCardSection1 {
    display: flex;
    flex-direction:column;
    width:30%;
}

.tankCardStats {
    width:30%;
    font-weight: 600;
    display:flex;
    flex-direction:column;
}

.buttonSection {
    width:30%;
    display:flex;
    flex-direction:column;
    justify-content:center;
}

.button {

    /*width:100%;*/
    margin:5px;
    box-shadow: 1px 1px 1px #000000;
    background-color:#800000 !important;
    border-color:#800000 !important;

}

.button:hover{
    box-shadow: 3px 3px 3px #000000;
}

.close-icon {
    height: 21px;
    width: 21px;
    text-align: center;
}

.close-circle:hover {
    height: 21px;
    width: 21px;
    background: rgba(191, 63, 63, 1);
    border-radius: 20px;
    float: right;
}

.btn:focus, .btn:active:focus, .btn.active:focus {
    outline: 0 none;
}

/**************************************************************************
CSS For the GameCard Class
**************************************************************************/
.gameCard {
    color: #E1E1E1;
    display: inline-flex;
}

.gameImage {
    width:70px;
    height:70px;
}

.gameCard h4 {
    margin: 5px 0px 5px 0px;
}

.gameCard h5 {
    margin: 5px 0px 5px 0px;
}

.gameCardSection1 {
    display: flex;
    flex-direction:column;
    width:30%;
}

.gameCard .players {
    width:60%;
    font-weight: 600;
    display:flex;
    flex-wrap:wrap;
}

.players span {
    width:50%;
    margin-top:15px;
}

.topRight {
    position: relative;
    top: 3px;
    right: -10px;
    color:red;
}

.remove {
    margin-top:5px;
    margin-left:15px;
}

/**************************************************************************
CSS For the Game Page
**************************************************************************/
.gameButtons {
    margin-bottom:15px;
}

.gameButtons .button {
        box-shadow: 3px 3px 3px black;
}


/**************************************************************************
CSS For the PlayerPanel Class
**************************************************************************/
.centerpiece h1 {
    text-align:center;
}

.centerPanel {
    display: flex;
    flex-wrap:wrap;
    justify-content:flex-start;
}

.inGamePanel {
    width:45%;
    position: relative;
    height: 0;
    padding-bottom: 45%;
    background-color: #262626;
    border-radius: 20px;
    text-align:center;
    margin:10px;

}

.topRight {
    position: absolute;
    top: 15px;
    right: 15px;
}
/**************************************************************************
CSS For the Watch Games
**************************************************************************/
.watchGame {
    height:640px;
    max-height:700px !important;
    padding:0 15px;
    overflow-y:auto;

    
}

.textStuff {
    text-align: center;
    vertical-align: middle;
}

.compileCode {
    height:640px;
    max-height:700px !important;
    padding:0 15px;
    overflow-y:auto;
}
/**************************************************************************
CSS For the Dark Background
**************************************************************************/
.tankPanel {
    height:auto;
    max-height:80vh !important;
    padding:0 15px;
    overflow-y:auto;
}

.dark-background {
    background-color: #262626;
}

body {
    background-color: #000000 !important;
}

.fixed {
    position: fixed;
}

/**************************************************************************
CSS For the Armory
**************************************************************************/
.armory-top {
    padding-left: 0px;
    padding-right: 0px;
    height: 80vh;
}

.armory-top .tankPanel {
    flex-grow:2;
    overflowY:auto;
    overflowX:hidden;
    background-color:#262626;
}

.editor-box{
    padding-left: 0px;
    padding-right: 0px;
}

.flex {
    display:flex;
    flex-direction:column;
    height: 80vh;
}

.editorStyle {
    height: 80vh;
}

.ace {
    height:100%;
}

.horizontal {
    width:100%;
    display:inline-flex;
    justify-content:space-around;
    margin-bottom:0;
}

.name-input {
    width:15%;
}

.side-margin {
    margin-left: 0px;
    margin-right: 0px;
}

.compiler-output {
    margin-top:10px;
    height:15vh;
}

.inputfile {
    width: 100%;
    height: 100%;
    opacity: 0;
    overflow: hidden;
    position: absolute;
    /*z-index: -1;*/
}

.btn-file {
    position: relative;
    overflow: hidden;
}
.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 100px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: block;
}

.row {
    margin-right: 0px;
    margin-left: 0px;
}

div.mainContent {
    margin: 0px;
}

/**************************************************************************
CSS For the Scrollbar
**************************************************************************/
.tankPanel::-webkit-scrollbar{
	width:3px;
}

.tankPanel::-webkit-scrollbar-thumb{
    background-color: transparent;
    border-radius:10px;
}

.tankPanel:hover::-webkit-scrollbar-thumb{
    background-color: #800022;
}

body::-webkit-scrollbar{
	width:16px;
	margin:0;
}
body::-webkit-scrollbar-thumb{
    background-color: transparent;
	border-radius:10px;
}
body::-webkit-scrollbar-thumb:hover{
    background-color: #262626;
	border:1px solid #333333;
}

/**************************************************************************
CSS For the Logout
**************************************************************************/

.userIcon {
    height:45px;
    width:45px;
}

.userInfo {
    display:none;
}

.logout:hover .userInfo {
    display:block;
    color:white;
    background-color: #262626;
    width:230px;
    height:170px;
    position:absolute;
    left:-160px;
    z-index: 100;
}

.logout a {
    color:white;
    font-size: 125%;
    font-weight: 600;
    margin: 15px;
}

.userImage {
    width:35%;
    height:45%;
    background-color: #3366ff;
    background-image: url("/images/user_white.png");
    background-repeat: no-repeat;
    background-size:contain;
}

.userInfo div {
    margin:15px;
}

